IDEA-182316 [groovy] cleanup
GitOrigin-RevId: 531c9d910e26129baa451baf75d4538273ac8500